Fix spacing above footer for course theme

--- a/assets/css/3rd-party/themes/course/quiz.scss
+++ b/assets/css/3rd-party/themes/course/quiz.scss
@@ -19,6 +19,10 @@
 	}
 }
 
+#sensei-quiz-list {
+	margin: 0 0 clamp(3.75rem, 2.5rem + 3.333vw, 5rem) 0
+}
+
 .quiz {
 	.sensei-course-theme__quiz {
 		&__main-content {
